2006-01-17  Rodney Dawes  <dobey@novell.com>

	* 16x16/devices/computer.png: Use a blue screen like the larger
	versions of this bitmap

	Fixes #165860

2006-01-17  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.13.5.1 release

2006-01-17  Rodney Dawes  <dobey@novell.com>

	* 48x48/devices/Makefile.am:
	* 48x48/places/Makefile.am:
	Fix a couple of incorrect size settings that break the theme

2006-01-17  Jakub Steiner <jimmac@ximian.com>

	* 16x16/places/folder-remote
	* 16x16/places/folder
	* 16x16/places/network-server
	* 16x16/places/network-workgroup
	* 16x16/places/user-desktop
	* 16x16/places/user-home
	* 16x16/places/user-trash
	* 16x16/status/user-trash-full: follow tango style guidelines more
		closely

2006-01-16  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.13.5 release
	
2006-01-16  Rodney Dawes  <dobey@novell.com>

	* configure.in: Require icon-naming-utils >= 0.6.5 for compat
	Set the themedir variable here, to improve maintainability

	* index.theme.in: Update for new contexts, and removals

	* *: Update to use the icon naming spec where we can for now
	Get rid of extra duplicate icons, and use generic versions instead
	Remove extraneous sizes to prepare for 16, 22, and scalable only in
	the future

	Solves #317460, #318505, #163693, #303601, #112909, #169745

2006-01-13  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/generic/stock_person.xcf.bz2:
	* 16x16/stock/generic/stock_person.png:
	* 24x24/stock/generic/stock_person.xcf.bz2:
	* 24x24/stock/generic/stock_person.png: 
	* scalable/stock/generic/stock_person.svg: An abstract figure 
		to avoid bug #311844 I'm expecting being labeled racist 
		in the next bugreport.
	
2006-01-09  Jakub Steiner <jimmac@ximian.com>

	* stock_media-shuffle.png: syncing proper names >> now stock_shuffle. 
		Unfortunately thing look for stock_repeat and stock_shuffle.
		
2006-01-03  Rodney Dawes  <dobey@novell.com>

	* Makefile.am: